install_data(
    'fuzz_config_kea_dhcp4/empty',
    'fuzz_config_kea_dhcp4/one-byte',
    'fuzz_config_kea_dhcp6/empty',
    'fuzz_config_kea_dhcp6/one-byte',
    'fuzz_http_endpoint_kea_dhcp4/config-get',
    'fuzz_http_endpoint_kea_dhcp4/config-get-with-service',
    'fuzz_http_endpoint_kea_dhcp4/empty',
    'fuzz_http_endpoint_kea_dhcp4/empty-json-map',
    'fuzz_http_endpoint_kea_dhcp4/one-byte',
    'fuzz_http_endpoint_kea_dhcp4/one-entry-json-map',
    'fuzz_http_endpoint_kea_dhcp6/config-get',
    'fuzz_http_endpoint_kea_dhcp6/config-get-with-service',
    'fuzz_http_endpoint_kea_dhcp6/empty',
    'fuzz_http_endpoint_kea_dhcp6/empty-json-map',
    'fuzz_http_endpoint_kea_dhcp6/one-byte',
    'fuzz_http_endpoint_kea_dhcp6/one-entry-json-map',
    'fuzz_packets_kea_dhcp4/dhcp-payload-only',
    'fuzz_packets_kea_dhcp4/empty',
    'fuzz_packets_kea_dhcp4/full-dhcp-packet',
    'fuzz_packets_kea_dhcp4/one-byte',
    'fuzz_packets_kea_dhcp4/udp-header',
    'fuzz_packets_kea_dhcp6/dhcp-payload-only',
    'fuzz_packets_kea_dhcp6/empty',
    'fuzz_packets_kea_dhcp6/full-dhcp-packet',
    'fuzz_packets_kea_dhcp6/one-byte',
    'fuzz_packets_kea_dhcp6/udp-header',
    'fuzz_unix_socket_kea_dhcp4/config-get',
    'fuzz_unix_socket_kea_dhcp4/config-get-with-service',
    'fuzz_unix_socket_kea_dhcp4/empty',
    'fuzz_unix_socket_kea_dhcp4/empty-json-map',
    'fuzz_unix_socket_kea_dhcp4/one-byte',
    'fuzz_unix_socket_kea_dhcp4/one-entry-json-map',
    'fuzz_unix_socket_kea_dhcp6/config-get',
    'fuzz_unix_socket_kea_dhcp6/config-get-with-service',
    'fuzz_unix_socket_kea_dhcp6/empty',
    'fuzz_unix_socket_kea_dhcp6/empty-json-map',
    'fuzz_unix_socket_kea_dhcp6/one-byte',
    'fuzz_unix_socket_kea_dhcp6/one-entry-json-map',
    install_dir: 'share/kea/fuzz',
    preserve_path: true,
)
