test(
    'test_fuzz_http_endpoint_kea_dhcp4.sh',
    find_program('test_fuzz_http_endpoint_kea_dhcp4.sh'),
)
test(
    'test_fuzz_packets_kea_dhcp6.sh',
    find_program('test_fuzz_packets_kea_dhcp6.sh'),
)
test(
    'test_fuzz_config_kea_dhcp4.sh',
    find_program('test_fuzz_config_kea_dhcp4.sh'),
)
test(
    'test_fuzz_packets_kea_dhcp4.sh',
    find_program('test_fuzz_packets_kea_dhcp4.sh'),
)
test(
    'test_fuzz_unix_socket_kea_dhcp6.sh',
    find_program('test_fuzz_unix_socket_kea_dhcp6.sh'),
)
test(
    'test_fuzz_config_kea_dhcp6.sh',
    find_program('test_fuzz_config_kea_dhcp6.sh'),
)
test(
    'test_fuzz_unix_socket_kea_dhcp4.sh',
    find_program('test_fuzz_unix_socket_kea_dhcp4.sh'),
)
test(
    'test_fuzz_http_endpoint_kea_dhcp6.sh',
    find_program('test_fuzz_http_endpoint_kea_dhcp6.sh'),
)
